ko-ker and override all pages

--- a/html/layout/main.html
+++ b/html/layout/main.html
@@ -5,13 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
+    <!-- header -->
+    <div class="header">
+        <img src="/image/logo.png" alt="logo">
+        <!-- Home About Contact -->
+        <div class="head-menu">
+            <ul>
+                <li>
+                    <a href="">ទំព័រដើម</a>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- content -->
     <div class="main">
         <h2 class="title">បេ​តិក​ភ័​ណ្ឌ​ពិភពលោក</h2>
         <div class="data-row" id="data-row"></div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="follow-us">
+            <span>Follow us : </span>
+            <span>
+                &copy; 2012-2023 
+                <a href="https://intocambodia.org/">IntoCambodia.org</a>
+            </span>
+        </div>
+        <div class="useful-links">
+            <ul>
+                <li>
+                    <a href="">អំពីគេហទំព័រ</a>
+                    <a href="">ទំនាក់ទំនង</a>
+                    <a href="">គោលការណ៌ឯកជន</a>
+                </li>
+            </ul>
+        </div>
+        <div class="latest">
+            <ul>
+                <li>
+                    <a href="">បុណ្យភ្ជុំបិណ្ឌ ឬបុណ្យដូនតា</a>
+                    <a href="">ខេត្តកំពង់ធំ</a>
+                    <a href="">ខេត្តសៀមរាប</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 <script src="/javascript/content.js"></script>
