--- a/css/apsara.css
+++ b/css/apsara.css
@@ -6,7 +6,7 @@
 .apasra-bg{
     background-image: url('/image/bg-apsara.jpg');
     width: 100%;
-    height: 310vh;
+    height: 280vh;
     background-size: contain;
     filter: blur(2px);
     position: relative;
@@ -15,7 +15,7 @@
     width: 100%;
     height: auto;
     position: absolute;
-    top: 0;
+    top: 50px;
     display: flex;
 }
 .left{
