bayon and override some file

--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
     font-family: 'Hanuman', serif;
 }
 .footer{
-    background-color: #17c5bc;
+    background-color: #3f87a6;
     height: 150px;
     display: flex;
     justify-content: space-between;
