--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #17c5bc;
+    background-color: #3f87a6;
     padding: 0 50px;
     height: 50px;
     overflow: hidden;
