--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,9 @@
     padding: 0 50px;
     height: 50px;
     overflow: hidden;
+    position: sticky;
+    top: 0;
+    z-index: 99;
 }
 .header img{
     width: 200px;
