--- a/css/angkor.css
+++ b/css/angkor.css
@@ -187,6 +187,15 @@ img {
     .title {
         font-size: 23px;
     }
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 100px !important;
+    }
+    .head-menu ul li a{
+        font-size: 10px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -251,6 +260,7 @@ img {
     .text {
         font-size: 11px
     }
+    
 }
 
 /* Responsive columns */
