--- a/css/apsara.css
+++ b/css/apsara.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Suwannaphum:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bokor&display=swap');
 *{
     margin: 0;
     box-sizing: border-box;
@@ -76,4 +77,160 @@
 }
 .right-content a{
     color: black;
+}
+@media (max-width: 575.98px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 100px !important;
+    }
+    .head-menu ul li a{
+        font-size: 10px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .right{
+        display: none !important;
+    }
+    .left{
+        width: 95%;
+    }
+    .apasra-bg{
+        height: 630vh !important;
+    }
+    .left .title{
+        font-family: 'Bokor', serif;
+        font-size: 20px;
+        margin: 20px 0;
+    }
+    .apsara-image-box{
+        height: 200px !important;
+    }
+} 
+
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 375px) and (max-width: 568px){
+    .apasra-bg{
+        height: 560vh !important;
+    }
+
+}
+@media (min-width: 425px) and (max-width: 568px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .right{
+        display: none !important;
+    }
+    .left{
+        width: 95%;
+    }
+    .apasra-bg{
+        height: 510vh !important;
+    }
+    .left .title{
+        font-family: 'Bokor', serif;
+        font-size: 25px;
+        margin: 20px 0;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .apasra-bg{
+        height: 430vh !important;
+    }
+    .left .title{
+        font-family: 'Bokor', serif;
+        font-size: 25px;
+        margin: 20px 0;
+    }
+    .right .title{
+        font-size: 18px;
+    }
+    .right-box {
+        height: 40px
+    }
+    .right-content a {
+        font-size: 10px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    .apasra-bg{
+        height: 350vh !important;
+    }
+    .right .title{
+        font-size: 20px;
+    }
+    .right-img{
+        height: 70%;
+    }
+    .left .title{
+        font-family: 'Bokor', serif;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .apasra-bg{
+        height: 325vh;
+    }
+    .left .title{
+        font-family: 'Bokor', serif;
+    }
 }
