--- a/css/bakong.css
+++ b/css/bakong.css
@@ -30,3 +30,205 @@
     object-fit: cover;
     border-radius: 20px;
 }
+@media (max-width: 575.98px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 100px !important;
+    }
+    .head-menu ul li a{
+        font-size: 10px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+        font-size: 17px;
+    }
+    button{
+        font-size: 12px !important;
+        padding: 0px !important;
+    }
+    .bakong-img{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 500px;
+        gap: 30px;
+        margin: 0 !important;
+        margin-bottom: 60px !important;
+    }
+    .bakong-box{
+        width: 100%;
+    }
+    .bakong-container {
+        height: 800vh;
+    }
+} 
+
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 375px) and (max-width: 568px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+        font-size: 17px;
+    }
+    button{
+        font-size: 12px !important;
+        padding: 0px !important;
+    }
+    .bakong-img{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 800px;
+        gap: 30px;
+        margin: 0 !important;
+        margin-bottom: 20px !important;
+    }
+    .bakong-box{
+        width: 100%;
+    }
+    .bakong-container {
+        height: 810vh;
+    }
+
+}
+@media (min-width: 425px) and (max-width: 568px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+        font-size: 18px;
+    }
+    button{
+        font-size: 12px !important;
+        padding: 0px !important;
+    }
+    .bakong-img{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 800px;
+        gap: 30px;
+        margin: 0 !important;
+        margin-bottom: 20px !important;
+    }
+    .bakong-box{
+        width: 100%;
+    }
+    .bakong-container {
+        height: 750vh;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .bakong-container {
+        height: 440vh;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    .bakong-container {
+        height: 360vh;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    .bakong-container {
+        height: 325vh;
+    }
+    .bakong-sub-contain .title{
+        font-weight: 700;
+    }
+}
