--- a/css/bayon.css
+++ b/css/bayon.css
@@ -35,3 +35,242 @@
     font-family: 'Suwannaphum', serif;
     text-align: center;
 }
+@media (max-width: 575.98px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bayon-bg{
+        height: 800vh;
+    }
+    .contain-left .title{
+        font-weight: 700;
+        font-size: 16px;
+    }
+    .contain-left{
+        width: 100%;
+    }
+    .bayon-sub-container{
+        flex-direction: column;
+    }
+    .contain-right{
+        column-gap: 10px;
+        display: flex;
+    }
+    .contain-right img{
+        width: 160px;
+        border-radius: 10px;
+        border: 5px double green;
+    }
+    .contain-right img{
+        display: none;
+    }
+} 
+
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 375px) and (max-width: 568px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bayon-bg{
+        height: 750vh;
+    }
+    .contain-left .title{
+        font-weight: 700;
+        font-size: 16px;
+    }
+    .contain-left{
+        width: 100%;
+    }
+    .bayon-sub-container{
+        flex-direction: column;
+    }
+    .contain-right{
+        column-gap: 10px;
+        display: flex;
+    }
+    .contain-right img{
+        width: 160px;
+        border-radius: 10px;
+        border: 5px double green;
+    }
+    .contain-right img:nth-child(5),
+    .contain-right img:nth-child(6),
+    .contain-right img:nth-child(4),
+    .contain-right img:nth-child(3){
+        display: none;
+    }
+
+}
+@media (min-width: 425px) and (max-width: 568px){
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 120px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .bayon-bg{
+        height: 680vh;
+    }
+    .contain-left .title{
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .contain-left{
+        width: 100%;
+    }
+    .bayon-sub-container{
+        flex-direction: column;
+    }
+    .contain-right{
+        column-gap: 10px;
+        display: flex;
+    }
+    .contain-right img{
+        width: 190px;
+        border-radius: 10px;
+        border: 5px double green;
+    }
+    .contain-right img:nth-child(5),
+    .contain-right img:nth-child(6),
+    .contain-right img:nth-child(4),
+    .contain-right img:nth-child(3){
+        display: none;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .bayon-bg{
+        height: 450vh;
+    }
+    .contain-left .title{
+        font-weight: 700;
+        font-size: 24px;
+    }
+    .contain-left{
+        width: 100%;
+    }
+    .bayon-sub-container{
+        flex-direction: column;
+    }
+    .contain-right{
+        column-gap: 10px;
+        display: flex;
+    }
+    .contain-right img{
+        width: 170px;
+        border-radius: 10px;
+        border: 5px double green;
+    }
+    .contain-right img:nth-child(5),
+    .contain-right img:nth-child(6){
+        display: none;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    .bayon-bg{
+        height: 410vh;
+    }
+    .contain-left .title{
+        font-weight: 700;
+        font-size: 28px;
+    }
+    .bayon-container{
+        top: 75px;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .bayon-bg{
+        height: 350vh;
+    }
+    .bayon-container{
+        top: 80px;
+    }
+    .contain-right img{
+        margin-bottom: 60px !important;
+        object-fit: cover;
+    }
+}
