--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Moul&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Suwannaphum&display=swap');
 *{
     margin: 0;
     box-sizing: border-box;
@@ -24,7 +25,7 @@
 .main .title{
     text-align: center;
     padding: 20px 0;
-    font-family: 'Moul', serif;
+    font-family: 'Moul', serif !important;
     font-weight: 500;
 }
 .main .data-row{
@@ -112,4 +113,297 @@ button.read-more:hover{
     box-shadow: 0px 2px 4px blue;
     background: linear-gradient(0.25turn, #3f87a6, #ebf8e1);
     opacity: 1;
+}
+#title{
+    font-family: 'Suwannaphum', serif !important;
+    font-size:  18px;
+    font-weight: 600;
+}
+@media (max-width: 568px){
+    .main{
+        height: 650vh;
+    }
+    .header{
+        padding: 5px !important;
+    }
+    .header img {
+        width: 100px !important;
+    }
+    .head-menu ul li a{
+        font-size: 10px;
+    }
+    .main .title{
+        font-size: 15px;
+    }
+    .data-row{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2% !important;
+    }
+    .data-column{
+        width: 96% !important;
+        height: 90% !important;
+        margin-bottom: 30px !important;
+        display: flex;
+        flex-direction: column;
+    }
+    #title{
+        font-size: 15px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; 
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+    p.column-detail{
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4; 
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+
+    }
+    .column.column.text{
+        width: 100%;
+    }
+    .column.column-img{
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .column.column-img img{
+        width: 90% !important;
+        object-fit: contain;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+        font-size: 15px;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 15px !important;
+        margin-bottom: 10px;
+    }
+    .read-more{
+        font-size: 14px;
+    }
+}
+@media (min-width: 375px) and (max-width: 568px) { 
+    .main{
+        height: 750vh;
+    }
+    .header{
+        padding: 10px !important;
+    }
+    .header img {
+        width: 110px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .main .title{
+        font-size: 20px;
+    }
+    .data-row{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2% !important;
+    }
+    .data-column{
+        width: 96% !important;
+        margin-bottom: 30px !important;
+        display: flex;
+        flex-direction: column;
+    }
+    #title{
+        font-size: 15px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; 
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+    p.column-detail{
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 8; 
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+
+    }
+    .column.column.text{
+        width: 100%;
+    }
+    .column.column-img{
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .column.column-img img{
+        width: 90% !important;
+        object-fit: contain;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 18px !important;
+        margin-bottom: 10px;
+    }
+ }
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 425px) and (max-width: 767.98px) {
+    .main{
+        height: 720vh;
+    }
+    .header{
+        padding: 10px !important;
+    }
+    .header img {
+        width: 110px !important;
+    }
+    .head-menu ul li a{
+        font-size: 12px;
+    }
+    .main .title{
+        font-size: 20px;
+    }
+    .data-row{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2% !important;
+    }
+    .data-column{
+        width: 96% !important;
+        margin-bottom: 30px !important;
+        
+    }
+    #title{
+        font-size: 15px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+    p.column-detail{
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 8; /* number of lines to show */
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+
+    }
+    .column.column-img img{
+        object-fit: contain;
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        height: 60vh !important;
+        padding: 30px 50px !important;
+    }
+    .follow-us{
+        text-align: center;
+        margin-bottom: 20px !important;
+    }
+    .useful-links,
+    .latest{
+        text-align: start;
+        width: 100%;
+    }
+    .footer .useful-links ul li a,
+    .footer .latest ul li a{
+        font-size: 18px !important;
+        margin-bottom: 10px;
+    }
+}
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .main {
+        height: 210vh;
+    }
+    .main .data-column {
+        height: 250px;
+    }
+    .column.column-img img{
+        width: 150px;
+        object-fit: contain !important;
+        height: auto;
+    }
+    p.column-detail{
+        text-indent: 20px;
+        text-align: left;
+        font-size: 14px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 5; /* number of lines to show */
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+    #title{
+        font-size: 15px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+                line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+    .data-row{
+        margin-bottom: 20px;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    .main{
+        height: 270vh;
+    }
+    .data-row{
+        padding-left: 2% !important;
+    }
+    .data-column{
+        height: 350px !important;
+    }
+    .column.column-img img{
+        object-fit: contain !important;
+    }
+    
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    .main {
+        height: 260vh;
+    }
+    .main .data-column{
+        height: 323px;
+    }
+    .column.column-img img{
+        object-fit: contain !important;
+    }
 }
