correct mekhala word in khmer

--- a/html/layout/main.html
+++ b/html/layout/main.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="column column text">
                     <span class="column-title">
-                        <h3 id="title">របាំព្រះមុនីមាឃលា គឺជារបាំព្រះរាជទ្រព្យនៃព្រះរាជាណាចក្រកម្ពុជា</h3>
+                        <h3 id="title">របាំព្រះមណីមេខលា គឺជារបាំព្រះរាជទ្រព្យនៃព្រះរាជាណាចក្រកម្ពុជា</h3>
                     </span>
                     <p class="column-detail" id="detail">
                         កម្ពុជា​ ជា​ប្រទេស​ពោរពេញ​ដោយ​វប្បធម៌ និង​សម្បូរ​អរិយធម៌​នៅ​អាស៊ីអាគ្នេយ៍។ ក្រៅ​ពី​បេតិកភណ្ឌ​វប្បធម៌ ប្រាសាទ​បុរាណ និង​សិល្បៈ​ប្រពៃណី នៅ​មាន​បេតិកភណ្ឌ​វប្បធម៌​អរូបិយ
