--- a/html/layout/main.html
+++ b/html/layout/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3573/3573187.png">
     <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
-    <title>Document</title>
+    <title>បេ​តិក​ភ័​ណ្ឌ​ពិភពលោក</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
